--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ CLOUDINARY_KEY=922434973423843
 CLOUDINARY_SECRET=QOkKSNrMaLva-NTuVqLjds698sc
 
 MAPTILER_API_KEY=nsov6TKiofWZOy47ZmHo
+
+DB_URL = mongodb+srv://firstUser:wykQ8QwL4qLuVCPQ@cluster0.skrckgc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
