add session store

--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ CLOUDINARY_SECRET=QOkKSNrMaLva-NTuVqLjds698sc
 
 MAPTILER_API_KEY=nsov6TKiofWZOy47ZmHo
 
-DB_URL = mongodb+srv://firstUser:wykQ8QwL4qLuVCPQ@cluster0.skrckgc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://firstUser:Igig64F8ELZidont@cluster0.97lccsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
+
+
+Igig64F8ELZidont
