--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CLOUDINARY_SECRET=QOkKSNrMaLva-NTuVqLjds698sc
 
 MAPTILER_API_KEY=nsov6TKiofWZOy47ZmHo
 
-DB_URL=mongodb+srv://user2000:7ksWlq5I7Lsejpv@cluster0.97lccsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://user2000:7ksWlq5I7vLsejpv@cluster0.97lccsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
 
