--- a/.env
+++ b/.env
@@ -4,9 +4,8 @@ CLOUDINARY_SECRET=QOkKSNrMaLva-NTuVqLjds698sc
 
 MAPTILER_API_KEY=nsov6TKiofWZOy47ZmHo
 
-DB_URL=mongodb+srv://user2000:7ksWlq5I7vLsejpv@cluster0.97lccsd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://user2000:QZv40CMoanFaHbjg@cluster0.fdqtgcx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
 
 
-Igig64F8ELZidont
